--- a/StockPriceTable/index.html
+++ b/StockPriceTable/index.html
@@ -1,50 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Running JavaScript</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  </head>
-  <body>
-    <table style="width: 100%">
-      <thead>
-        <tr>
-          <th style="width: 10%">Date</th>
-          <th style="width: 18%">LG</th>
-          <th style="width: 18%">NAVER</th>
-          <th style="width: 18%">SK</th>
-          <th style="width: 18%">삼성전자</th>
-          <th style="width: 18%">카카오</th>
-        </tr>
-      </thead>
-      <tbody id="tbody"></tbody>
-    </table>
 
-    <script src="utils.js"></script>
-    <script src="csvdata_all.js"></script>
-    <script>
-      const selNames = ['LG', 'NAVER', 'SK', '삼성전자', '카카오'];
-      const csv = getCsvData();
-      //console.log(csv);
-      const json = csv2json(csv);
-      //console.log(json[0]);
-      const sel = filterName(json, 'name', selNames);
-      const rows = groupByDate(sel);
-      console.log(rows);
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Running JavaScript</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
 
-      for (let i = 0; i < rows.length; i++) {// row count
-        const da = rows[i]['date'];
-        const cols = rows[i]['cols'];
+<body>
+  <table style="width: 100%">
+    <thead id="thead"></thead>
+    <tbody id="tbody"></tbody>
+  </table>
 
-        let tabrow = '<tr>' + '<td style="width: 10%">' + da + '</td>';
-        for (let j = 0; j < cols.length; j++) {// col count
-          tabrow =
-            tabrow + '<td style="width:18%; text-align:center;">' + cols[j]['price'] + '</td>';
-        }
-        tabrow += '</tr>';
-        $('#tbody').append(tabrow);// using jQuery
+  <script src="utils.js"></script>
+  <script src="csvdata_all.js"></script>
+  <script>
+    //const selNames = ['LG', 'NAVER', 'SK', '삼성전자', '카카오'];
+    const csv = getCsvData();
+    //console.log(csv);
+    const json = csv2json(csv);
+    //console.log(json[0]);
+
+    //17,06,16 번째에 있는 종목 불러오기 - 07번이 Naver여서 06번으로 불러왔습니다!
+    const selNames = ['NAVER', '카카오', json[17]['name'], json[6]['name'], json[16]['name']];
+
+    const sel = filterName(json, 'name', selNames);
+    console.log(selNames);
+    const rows = groupByDate(sel);
+    console.log(rows);
+
+    let th = '<tr>' + '<th style="width: 10%">' + 'Line No.' + '</th>' + '<th style="width: 10%">' + 'Date' + '</th>';
+    console.log(selNames.length);
+    for (let i = 0; i < selNames.length; i++) {
+      th = th + '<th style="width: 10%">' + selNames[i] + '</th>';
+      console.log(selNames[i], th);
+    }
+    th += '</tr>';
+    console.log(th);
+    $('#thead').append(th);
+
+    for (let i = 0; i < rows.length; i++) {// row count
+      const da = rows[i]['date'];
+      const cols = rows[i]['cols'];
+
+      let tabrow = '<tr>' + '<td style="width: 10%">' + (i + 1) + '</td>' + '<td style="width: 10%">' + da + '</td>';
+      for (let j = 0; j < cols.length; j++) {// col count
+        tabrow =
+          tabrow + '<td style="width:10%; text-align:center;">' + cols[j]['price'] + '</td>';
       }
-    </script>
-  </body>
+      tabrow += '</tr>';
+      $('#tbody').append(tabrow);// using jQuery
+    }
+  </script>
+</body>
+
 </html>
